tests/semantic/stmt_builder/snapshots/r#mod__semantic__stmt_builder__block_building__block_with_access_to_outside_var.snap
---
source: tests/semantic/stmt_builder/block_building.rs
expression: "&test_ctx.prog_ctx.func_ctx"
---
funcs:
  0:
    name: do_something
    namespace_id: 0
    func_type: Global
    params:
      - label: ~
        name: number
        var_id: 0
        value_type:
          Primitive: Int
        def_val: ~
        range:
          start: 0
          end: 0
    return_type:
      Primitive: Void
    block:
      body: []
      scope_id: 2
    range:
      start: 0
      end: 0
  1:
    name: main
    namespace_id: 0
    func_type: Global
    params: []
    return_type:
      Primitive: Void
    block:
      body:
        - LocalVar:
            var_id: 1
        - Block:
            block:
              body:
                - Expression:
                    expr:
                      kind:
                        FuncCall:
                          id: 0
                          args:
                            - var_id: 0
                              value:
                                kind:
                                  Identifier: 1
                                value_type:
                                  Primitive: Int
                                range:
                                  start: 0
                                  end: 0
                              range:
                                start: 0
                                end: 0
                      value_type:
                        Primitive: Void
                      range:
                        start: 0
                        end: 0
              scope_id: 4
      scope_id: 3
    range:
      start: 0
      end: 0
member_functions: {}
global_functions:
  ? - 0
    - do_something
  : 0
  ? - 0
    - main
  : 1
next_function_id: 2
